Sat Jul 18 07:56:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fail to create a widget object for an unknown
	  wiget path. 

Sat Jul 18 07:06:31 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb,ext/tk/lib/tk/grid.rb: Bug fix on grid_slaves().
	  Extend usage pattern of grid_column()/grid_row().

Sat Jul 18 06:30:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h: include winsock headers in extern "C++" for
	  C++ extension libraries.

	* include/ruby/missing.h (vsnprintf): workaround for VC++.
	  [ruby-core:23096]

Sat Jul 18 00:23:47 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/readline/readline.c (Init_readline): rl_catch_signals does
	  not exist on some platform like Mac OS X 10.5.

	* ext/readline/extconf.rb: checks existance of rl_catch_signals.

Fri Jul 17 22:37:22 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (socket_s_ip_address_list): drop inactive
	  adapters.

	* test/socket/test_{nonblock,addrinfo,socket}.rb: skip some tests on
	  Windows.
	  [ruby-core:23051]

Fri Jul 17 22:29:21 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): use rl_catch_sigwinch only
	  when existing.

	* ext/readline/extconf.rb: check existance of rl_catch_sigwinch, and
	  workaround for native Win32 readline port.

Fri Jul 17 18:18:23 2009  Tanaka Akira  <akr@fsij.org>

	* range.c (recursive_hash): extracted from range_hash.  reject
	  recursive key.
	  (range_hash): use recursive_hash.

Fri Jul 17 18:11:32 2009  Tanaka Akira  <akr@fsij.org>

	* struct.c (recursive_hash): extracted from rb_struct_hash.  reject
	  recursive key.
	  (rb_struct_hash): use recursive_hash.

Fri Jul 17 16:45:22 2009  Tanaka Akira  <akr@fsij.org>

	* array.c (recursive_hash): reject recursive key.

Fri Jul 17 15:20:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (DIGSPERINT): fix for LP64.

	* random.c (fill_random_seed): /dev/urandom is not available on