@@ -1,3 +1,7 @@
+Sat Jul 18 09:07:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* random.c (fill_random_seed): use cryptographic service on Windows.
+
 Sat Jul 18 07:56:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/tk.rb: fail to create a widget object for an unknown
